<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Debug Mode on/off -->
    <string name="debug">on</string>

    <!-- Android generated -->
    <string name="app_name">sw8program</string>
    <string name="hello_world">Fuck dig Johan</string>
    <string name="action_settings">Settings</string>

    <!-- Login & SignUp activity-->
    <string name="prompt_email">Email</string>
    <string name="prompt_alias">Display navn</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Gentag password</string>
    <string name="action_sign_in">Log ind</string>
    <string name="action_sign_in_short">Log ind</string>
    <string name="action_sign_up_short">Opret</string>
    <string name="action_start_sign_up">Ny? Opret bruger</string>
    <string name="action_sign_up">Opret bruger</string>
    <string name="error_invalid_email">Ugyldig email</string>
    <string name="error_invalid_password">Password skal være minimum 6 tegn</string>
    <string name="error_incorrect_password">Forkert password</string>
    <string name="error_bad_account">Oplysningerne kunne ikke genkendes</string>
    <string name="error_field_required">Feltet kan ikke være tomt</string>
    <string name="error_password_mismatch">Passwords skal være ens</string>
    <string name="error_email_taken">Denne email er allerede i brug</string>

    <!-- Recipe activity -->
    <string name="comment_hint">Skriv kommentar</string>
    <string name="comment_submit">Post</string>

    <!-- Recommend fragment -->
    <string name="recommend_button">Find min mad!</string>
    <string name="recommend_tip"><u>Dårlige forslag? Skift dine præferencer</u></string>

    <!-- Favourites fragment -->
    <string name="favourite_list_empty">Ingen favoritter at vise</string>

    <!-- Favourites context menu -->
    <string name="favourite_remove">Fjern favorit</string>

    <!-- Settings fragment -->
    <string name="setting_recommendation_amount">Antal forslag</string>
    <string name="setting_hint_recommendation_amount">Indtast 1 - 10</string>
    <string name="setting_store_radius">Max afstand til butikker</string>
    <string name="setting_hint_store_radius">Indtast 1 - 30km</string>
    <string name="log_out">Log ud</string>

    <!-- Discover fragment -->
    <string name="discover_list_empty">Ingen opskrifter indenfor søgeområdet</string>
    <string name="not_interested">Ikke interesseret i denne opskrift</string>

    <!-- User context menu -->
    <string name="user_image_remove">Slet billede</string>
    <string name="user_image_change">Skift billede...</string>
    <string name="user_image_choose">Vælg billede</string>

    <!-- Recommendation fragments -->
    <string name="recommendation_yes">Vælg</string>
    <string name="recommendation_no">Nej tak</string>
    <string name="recommendation_finish">Tilbage</string>
    <string name="recommendation_end_message">Øv! Ikke flere forslag :(</string>
    <string name="recommendation_price">Pris:</string>
    <string name="recommendation_savings">Besparelse i butik:</string>
    <string name="recommendation_currency">DKK</string>

    <!-- Other -->
    <string name="loading">Øjeblik...</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
