<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_amount_of_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_recommendation_amount"
            android:gravity="start"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/number_of_recommendations_editable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/setting_hint_recommendation_amount"/>

        </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout_amount_of_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_store_radius"
            android:gravity="start"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/setting_store_radius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/setting_hint_store_radius"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_log_out"
        android:text="@string/log_out"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>