<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:id="@+id/viewpager_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_name"
        android:layout_marginBottom="20dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/paged_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </RelativeLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_recommendation_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recommendation_yes"/>

        <Button
            android:id="@+id/button_recommendation_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recommendation_no"/>

        </LinearLayout>
    </RelativeLayout>