<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              tools:context="program.sw8.sw8program.RecipeActivity">

    <ScrollView
        android:id="@+id/recipe_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/scroll_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_centerHorizontal="true"
            android:textSize="40dp"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout
            android:id="@+id/viewpager_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_name">

            <android.support.v4.view.ViewPager
                android:id="@+id/paged_image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ingredient_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewpager_container">

            </LinearLayout>

        <TextView
            android:id="@+id/preparation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_below="@id/ingredient_layout"
            android:text="@string/loading"/>


        <RelativeLayout
            android:id="@+id/comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/preparation_text">

            <Button
                android:id="@+id/comment_submit"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:text="@string/comment_submit"/>

            <EditText
                android:id="@+id/comment_box"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_toLeftOf="@id/comment_submit"
                android:minHeight="100dp"
                android:hint="@string/comment_hint"
                android:scrollHorizontally="false"
                android:maxLength="400"
                android:imeOptions="actionSend"
                android:inputType="textShortMessage|textMultiLine|textCapSentences"
                android:singleLine="false"/>

        </RelativeLayout>
        <ListView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_layout">

            </ListView>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>



